--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # this is only for search engines, it does not appear in the home
 # as long as the json variables name and description are provided
-title: Hacked Jekyll
-description: Jekyll microtheme that looks like JSON
+title: Superlambda
+description: AI and Compute-intensive workload automation on the cloud
 baseurl: ""
-url: https://hacked-jekyll.netlify.app
+url: https://multicloud.github.io
 
 # this information is shown on the homepage, all fields are optional and
 # can be declared either as a single string or as a string array/hash
