--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 # as long as the json variables name and description are provided
 title: Superlambda
 description: AI and Compute-intensive workload automation on the cloud
-baseurl: "/website"
-url: https://multicloud.github.io
+baseurl: ""
+url: https://multicloud.github.io/website
 
 # this information is shown on the homepage, all fields are optional and
 # can be declared either as a single string or as a string array/hash
