--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,23 @@
 # this is only for search engines, it does not appear in the home
 # as long as the json variables name and description are provided
-title: Superlambda
-description: AI and Compute-intensive workload automation on the cloud
+title: A1 Labs
+description: Enterprise Gen-AI
 baseurl: ""
-url: https://www.superlambda.co/
+url: https://www.a1-labs.co/
 
 # this information is shown on the homepage, all fields are optional and
 # can be declared either as a single string or as a string array/hash
 json:
-  name: Superlambda
+  name: A1 Labs
   description:
     - Hello!
     - Thank you for visiting our page
     - We're still in stealth
   problem:
-    - AI and compute-intensive workloads are super complex at scale
-    - AI and compute-intensive workloads are super expensive at scale
-    - AI requires specific operational expertise
-    - AI requires specific technical expertise
-    - AI requires specific engineering expertise
-    - Are you over-spending on your cloud infrastructure for AI ?
-    - Are you over-spending on your compute for AI ?
+    - Your Gen-AI costs are getting out of control?
+    - Gen-AI is eating your margins?
+    - Don't want to send your data out to the cloud?
+    - Orchestrating and running multiple models is a headache?
   solution:
     - ...
     
