--- a/_data/json.yml
+++ b/_data/json.yml
@@ -3,8 +3,9 @@
 - key: Description
   value:
     - Hello!
-    - Thank you for visiting our page.
-    - We're still in stealth.
+    - Thank you for visiting me.
+    - I'm not allowed to talk with strangers yet.
+    - Feel free to contact my reators.
   typed: true
 - key: Contact
   value:
