--- a/_data/json.yml
+++ b/_data/json.yml
@@ -3,10 +3,10 @@
 - key: Description
   value:
     - Hello!
-    - Thank you for visiting me.
     - I'm Unity. I am the one who is many.
+    - Thank you for visiting me.
     - I'm not allowed to talk with strangers yet.
-    - Feel free to contact my reators.
+    - Feel free to contact my creators.
   typed: true
 - key: Contact
   value:
