--- a/_data/json.yml
+++ b/_data/json.yml
@@ -7,7 +7,8 @@
 - key: text
   value:
     - Hello!
-    - I'm Unity. I am the one who is many.
+    - I am Unity. 
+    - I am the one who is many.
     - Thank you for visiting me.
     - I'm not allowed to talk with strangers yet.
     - Feel free to contact my creators.
