--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,27 @@ exclude:
 plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
+  - jekyll-analytics
 
 sass:
   sourcemap: never
+
+jekyll_analytics:
+  GoogleAnalytics:          # Add, if you want to track with Google Analytics
+    id: G-TKZ7L5GZ7E          # Required - replace with your tracking id
+    anonymizeIp: false      # Optional - Default: false - set to true for anonymized tracking
+
+  # Matomo:                   # Add, if you want to track with Matomo (former Piwik Analytics)
+    # url: matomo.example.com # Required - url to Matomo installation without trailing /
+    # siteId: "1234"          # Required - replace with your Matomo site id (Write id as string)
+
+  # Piwik:                    # Add, if you want to track with Piwik
+  #   url: piwik.example.com  # Required - url to Piwik installation without trailing /
+  #   siteId: "1234"          # Required - replace with your Piwik site id (Write id as string)
+
+  # MPulse:                   # Add if you want to track performance with mPulse
+  #   apikey: XXXXX-YYYYY-ZZZZZ-AAAAA-23456   # Required - replace with your mPulse API key
+
+  # Plausible:
+  #   domain: 'example.com'   # The domain configured in plausible
+  #   source: 'https://plausible.example.com/js/plausible.js' # The source of the javascript
