link to mmlupro analysis

--- a/_data/json.yml
+++ b/_data/json.yml
@@ -22,3 +22,6 @@
     - key: Email
       value: info@a1-labs.co
       url: "mailto:info@a1-labs.co"
+    - key: models
+      value: mmlupro
+      url: "/assets/mmlupro"      
